# Mega-Cube

./: ANIMATIONS.md  ARCHITECTURE.md  HARDWARE.md  MATHEMATICS.md  READMECOMPREHENSIVE.md
Software/LED Display/src/core/: Config.h
Software/LED Display/src/gui/: ui.cpp  ui.h  ui_img_generic_80_png.c
Software/LED Display/src/space/: Animation.cpp  Aurora.h  Boids.h  DNA.h  Explosion.h  Fireflies.h  Fountain.h  Galaxy.h  Globe.h  Heart.h  Hourglass.h  Interference.h  Kaleidoscope.h  LavaLamp.h  Lorenz.h  Matrix.h  Maze.h  Moebius.h  Ocean.h  Pong3D.h  Rain.h  Ripple.h  Sierpinski.h  Snake.h  Spirograph.h  Tetris.h  Tornado.h  Torus.h
Software/Simulator/: .gitignore  CMakeLists.txt  README.md
Software/Simulator/src/: Arduino.h  Renderer.cpp  Renderer.h  SimDisplay.cpp  SimDisplay.h  main.cpp
